--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "chat-nodejs-websockets",
   "version": "1.0.0",
   "description": "A project to play with websockets in nodejs for a web chat app",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js"
