--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A project to play with websockets in nodejs for a web chat app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"    
   },
   "author": "João Martins",
   "license": "ISC",
